Fix spacing of profile

--- a/app/assets/stylesheets/crud.scss
+++ b/app/assets/stylesheets/crud.scss
@@ -15,11 +15,6 @@ h1 {
   padding-top: 10px;
 }
 
-#flash {
-  clear: both;
-  padding-top: 5px;
-}
-
 table.table td.action {
   width: 20px;
   text-align: center;
